# first-lesson-ai-coder

./: .env_template  .gitignore  README.md  main.py  pyproject.toml
chapter02/: chat_bot.py  compute_token.py
chapter03/: introduction.txt  rag_chatbot.py  rag_index.py
chapter04/basic_chatbot/: chatbot.py
chapter04/langchain_chatbot/: langchain_chatbot.py
chapter05/: mem_record.py
chapter06/: llm_cache.py  llm_cache_by_redis.py
