[project]
name = "langchain-first"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "dashscope>=1.25.13",
    "dotenv>=0.9.9",
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "mem0ai>=1.0.7",
    "redis==4.5.5",
    "tiktoken>=0.12.0",
]
